--- a/ucms_dashboard/ucms_dashboard.css
+++ b/ucms_dashboard/ucms_dashboard.css
@@ -1,7 +1,7 @@
 
 #contextual-pane {
   position: fixed;
-  z-index: 10;
+  z-index: 110;
 }
 #contextual-pane.pane-right {
   top: 0;
@@ -17,7 +17,7 @@
 }
 
 .navbar {
-  z-index: 20;
+  z-index: 120;
 }
 
 #contextual-pane .inner {
